# 3-python-package-cravaggio

./: Pipfile  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: build.yml  event-logger.yml  python-package.yml
.history/: README_20250318230637.md  README_20250318233128.md  README_20250318233138.md  README_20250318233152.md  example_20250318230919.py
.history/src/fortunecookiecravaggio/: fortune_20250316171650.py  fortune_20250316173900.py  fortune_20250316213112.py  fortune_20250316213144.py  fortune_20250316213315.py  fortune_20250318231930.py  fortunes_20250318231700.txt
.history/tests/: test_custom_fortune_20250316214154.py  test_custom_fortune_20250317200613.py
src/fortune-cookie-cravaggio/: main.py
src/fortunecookiecravaggio/: __main__.py  fortune.py  fortunes.txt
tests/: test_fortune_of_the_day.py  test_fortune_with_ascii_art.py  test_get_fortune.py
