[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fortune-cookie-cravaggio"
version = "0.1"
authors = [{name="",email=""}]
description = ""
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["fortune cookie"]

[project.urls]
Homepage = "https://github.com/software-students-spring2025/3-python-package-cravaggio"