[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortunecookiecravaggio"
version = "1.0.4"
authors = [{name="Nina Li",email="jl13999@nyu.edu"},{name="Sirui Wang",email="sw5546@nyu.edu"},{name="Bohan Yin",email="by2179@nyu.edu"},{name="Nick Zhu",email="xz4687@nyu.edu"}]
description = "A package that generates “fortune cookie” messages, programming wisdom, or absurd advice when called."
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["fortune cookie"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-cravaggio"
"Repository" = "https://github.com/software-students-spring2025/3-python-package-cravaggio.git"
"Bug Tracker" = "https://github.com/software-students-spring2025/3-python-package-cravaggio/issues"